--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,30 @@
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-columns: 20px 200px 1fr 20px;
+  grid-template-rows: 20px 200px 30px 1fr 20px;
   background-color: #F7EDE2;
+}
+
+.App #header {
+  grid-column: 2 / span 2;
+  grid-row: 2 / span 1;
+  text-align: center;
+}
+
+.App #form {
+  grid-column: 3 / span 1;
+  grid-row: 3 / span 1;
+  text-align: center;
+}
+
+.App #sidebar {
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 2;
+  text-align: center;
+  background-color: #F28482;
+}
+
+.App #results {
+  grid-column: 3 / span 1;
+  grid-row: 4 / span 1;
 }
