--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -1,11 +1,42 @@
-.card-image {
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 500px));
+    grid-template-rows: minmax(250px, 300px);
+    grid-gap: 1rem;
+    margin: 2rem;
+    max-width: 1600px;
+    padding: 1rem;
+    overflow: hidden;
+}
+
+.card {
     position: relative;
-    text-align: center;
+}
+
+.card-image {
+    grid-column: 2;
+    grid-row: 2;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    border-style: solid;
+    border-width: 3rem;
+    border-color: #F5CAC3;
+}
+
+.card-image img {
+    height: 100%;
+    width: 100%;
 }
 
 h3 {
     position: absolute;
     text-align: center;
-    bottom: 0%;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    color: pink;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 2.2rem;
 }
