--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -1,27 +1,31 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 500px));
-    grid-template-rows: minmax(250px, 300px);
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    grid-template-rows: repeat(4, minmax(250px, 1fr));
     grid-gap: 1rem;
-    margin: 2rem;
+    margin: 0 auto;
     max-width: 1600px;
     padding: 1rem;
+    /* position: relative; */
     overflow: hidden;
 }
 
 .card {
-    position: relative;
+    display: grid;
+    grid-template-rows: 3fr 1fr;
 }
 
 .card-image {
-    grid-column: 2;
-    grid-row: 2;
-    align-items: center;
-    display: flex;
+    /* display: flex; */
+    /* flex-direction: column; */
     justify-content: center;
+    align-items: center;
     border-style: solid;
-    border-width: 3rem;
+    border-width: 1rem;
     border-color: #F5CAC3;
+    border-bottom: none;
+    padding: 1rem;
+    position: relative;
 }
 
 .card-image img {
@@ -30,13 +34,19 @@
 }
 
 h3 {
-    position: absolute;
+    /* position: absolute; */
     text-align: center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    color: pink;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    font-size: 2.2rem;
+    margin: 0;
+    color: #F7EDE2;
+    font-size: 1.6rem;
+    border-style: solid;
+    border-width: 1rem;
+    border-color: #F5CAC3;
+    border-top: none;
+    background-color: #84A59D;
+    
+}
+
+h3 span {
+    /* margin: 1rem; */
 }
