--- a/src/pages/Results.css
+++ b/src/pages/Results.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: grid;
     grid-template-columns: repeat(3, minmax(250px, 1fr));
     grid-template-rows: repeat(4, minmax(200px, 1fr));
@@ -39,4 +39,4 @@ h3 {
     border-top: none;
     background-color: #84A59D;
 
-}
+} */
