style sidebar (partially)

--- a/src/pages/Recipe.css
+++ b/src/pages/Recipe.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 .recipe-container {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: repeat(5 1fr);
     grid-gap: 1rem;
     margin: 1rem;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .recipe-image {
@@ -33,6 +36,7 @@
 .instructions-list {
     grid-column: 1 / span 1;
     grid-row: 3 / span 3;
+    line-height: 0.5;
 }
 
 /* .ingredients-title {} */
@@ -40,11 +44,13 @@
 .ingredients-list {
     grid-column: 2 / span 1;
     grid-row: 3 / span 1;
+    line-height: 0.5;
 }
 
 .equipment-list {
     grid-column: 2 / span 1;
     grid-row: 4 / span 1;
+    line-height: 0.5;
 }
 
 .nutrition-facts {
