--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 .App {
   display: grid;
@@ -13,7 +15,6 @@
   text-align: center;
   /* background color placeholder */
   background-color: #84A59D;
-  position: sticky;
 }
 
 .App #form {
@@ -86,5 +87,20 @@ h3 {
   border-color: #F5CAC3;
   border-top: none;
   background-color: #84A59D;
+}
 
+/* sidebar specific */
+
+.sidebar-title {
+  font-family: 'Pacifico', cursive;
+  color: #F6BD60;
+}
+
+.category-links {
+  display: block;
+  font-family: 'Lobster', cursive;
+  font-size: 2rem;
+  width: 100%;
+  height: 100%;
+  overflow-wrap: break-word;
 }
