--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Rubik&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Sans+Pro&family=Lobster&display=swap');
 
 .App {
   display: grid;
@@ -89,18 +87,58 @@ h3 {
   background-color: #84A59D;
 }
 
+.card-title {
+  margin: auto;
+  width: 90%;
+}
+
 /* sidebar specific */
 
 .sidebar-title {
   font-family: 'Pacifico', cursive;
   color: #F6BD60;
+  font-size: 3rem;
+  overflow-wrap: break-word;
 }
 
 .category-links {
-  display: block;
   font-family: 'Lobster', cursive;
   font-size: 2rem;
   width: 100%;
   height: 100%;
   overflow-wrap: break-word;
+}
+
+a:-webkit-any-link {
+  text-decoration: none;
+  color: #F7EDE2;
+}
+
+#category {
+  display: block;
+}
+
+/* reference: https: //www.30secondsofcode.org/css/s/hover-underline-animation */
+.hover-animation {
+  display: inline-block;
+  position: relative;
+  color: #F7EDE2;
+}
+
+.hover-animation:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 5px;
+  bottom: 0;
+  left: 0;
+  background-color: #F7EDE2;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
