--- a/src/pages/Recipe.css
+++ b/src/pages/Recipe.css
@@ -13,8 +13,7 @@
     grid-row: 1 / span 1;
     text-align: center;
     margin: 1rem;
-    border: 1rem;
-    ;
+    justify-content: center;
 }
 
 .recipe-image img {
@@ -22,6 +21,11 @@
     height: 100%;
     max-width: 500px;
     max-height: 300px;
+    align-items: center;
+    border-style: solid;
+    border-width: 1rem;
+    border-color: #F5CAC3;
+    padding: 1rem;
 }
 
 .recipe-title {
