--- a/src/pages/Recipe.css
+++ b/src/pages/Recipe.css
@@ -42,6 +42,7 @@
     grid-column: 1 / span 1;
     grid-row: 3 / span 3;
     line-height: 1;
+    font-size: 1.2rem;
 }
 
 /* .ingredients-title {} */
@@ -50,12 +51,14 @@
     grid-column: 2 / span 1;
     grid-row: 3 / span 1;
     line-height: 1;
+    font-size: 1.1rem;
 }
 
 .equipment-list {
     grid-column: 2 / span 1;
     grid-row: 4 / span 1;
     line-height: 1;
+    font-size: 1.1rem;
 }
 
 .nutrition-facts {
