--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ a {
 .container {
   display: grid;
   grid-template-columns: repeat(3, minmax(200px, 1fr));
-  grid-template-rows: repeat(auto, minmax(150px, 1fr));
+  grid-template-rows: repeat(4 minmax(150px, 1fr));
   grid-gap: 1rem;
   margin: 0 auto;
   max-width: 1600px;
